# Quaternion

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  BUILDING.md  CMakeLists.txt  ISSUE_TEMPLATE.md  LICENSE.spdx  Quaternion.project  README.md  SECURITY.md  build_quaternion.sh  kcoreaddons_export.h  qmatrixclient.kdev4  quaternion.kdev4  quaternion.supp  quaternion_en.ts  quaternion_win32.rc
.ci/: bintray-release.json
.github/workflows/: ci.yml  cmake.yml  codeql-analysis.yml
client/: aboutdialog.cpp  aboutdialog.h  accountcombobox.cpp  accountcombobox.h  accountregistry.cpp  accountregistry.h  accountselector.cpp  accountselector.h  activitydetector.cpp  activitydetector.h  chatedit.cpp  chatedit.h  chatroomwidget.cpp  chatroomwidget.h  dialog.cpp  dialog.h  dockmodemenu.cpp  dockmodemenu.h  gitinfo.cpp.in  gitinfo.h  htmlfilter.cpp  htmlfilter.h  imageprovider.cpp  imageprovider.h  kchatedit.cpp  kchatedit.h  linuxutils.h  logging_categories.h  logindialog.cpp  logindialog.h  main.cpp  mainwindow.cpp  mainwindow.h  message.cpp  message.h  networkconfigdialog.cpp  networkconfigdialog.h  popupnotifier.cpp  popupnotifier.h  profiledialog.cpp  (+23 more)
client/models/: abstractroomordering.cpp  abstractroomordering.h  logmessagemodel.cpp  logmessagemodel.h  messageeventmodel.cpp  messageeventmodel.h  orderbytag.cpp  orderbytag.h  roomlistmodel.cpp  roomlistmodel.h  userlistmodel.cpp  userlistmodel.h
client/qml/: ActiveLabel.qml  AnimatedTransition.qml  AnimationBehavior.qml  Attachment.qml  AudioContent.qml  AuthorInteractionArea.qml  Avatar.qml  DownloadableContent.qml  FastNumberAnimation.qml  FileContent.qml  ImageContent.qml  Logger.qml  MyToolTip.qml  NormalNumberAnimation.qml  ScrollFinisher.qml  ScrollToButton.qml  TextElider.qml  Timeline.qml  TimelineItem.qml  TimelineItemToolButton.qml  TimelineMouseArea.qml  TimelineSettings.qml  TimelineTextEditSelector.qml  ToolTip.qml  ToolTipArea.qml  chat.qml
client/translations/: quaternion.en.ts  quaternion_de.ts  quaternion_de_DE.ts  quaternion_en.ts  quaternion_en_GB.ts  quaternion_en_US.ts  quaternion_es.ts  quaternion_pl.ts  quaternion_ru.ts
cmake/: ECMInstallIcons.cmake  MacOSXBundleInfo.plist.in
de/: quaternion_de.ts
en_GB/: quaternion_en_GB.ts
flatpak/: build.sh  com.github.quaternion.json  com.github.quaternion.yaml  setup_runtime.sh
icons/: quaternion.icns
icons/breeze/: COPYING.breeze  README.breeze
icons/quaternion/: sc-apps-quaternion.svgz
lib/: connection.cpp  connection.h  connectiondata.cpp  connectiondata.h  connectionprivate.cpp  connectionprivate.h  joinstate.h  logmessage.cpp  logmessage.h  room.cpp  room.h  state.cpp  state.h  user.cpp  user.h
lib/events/: event.cpp  event.h  receiptevent.cpp  receiptevent.h  roomaliasesevent.cpp  roomaliasesevent.h  roomcanonicalaliasevent.cpp  roomcanonicalaliasevent.h  roommemberevent.cpp  roommemberevent.h  roommessageevent.cpp  roommessageevent.h  roomnameevent.cpp  roomnameevent.h  roomtopicevent.cpp  roomtopicevent.h  typingevent.cpp  typingevent.h  unknownevent.cpp  unknownevent.h
lib/jobs/: basejob.cpp  basejob.h  checkauthmethods.cpp  checkauthmethods.h  geteventsjob.cpp  geteventsjob.h  initialsyncjob.cpp  initialsyncjob.h  joinroomjob.cpp  joinroomjob.h  leaveroomjob.cpp  leaveroomjob.h  mediathumbnailjob.cpp  mediathumbnailjob.h  passwordlogin.cpp  passwordlogin.h  postmessagejob.cpp  postmessagejob.h  postreceiptjob.cpp  postreceiptjob.h  roommembersjob.cpp  roommembersjob.h  roommessagesjob.cpp  roommessagesjob.h  syncjob.cpp  syncjob.h
linux/: com.github.quaternion.appdata.xml  com.github.quaternion.desktop  quaternion.desktop
ru/: quaternion_ru.ts
